# wedding

./: .gitignore  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src/api/: index.ts
src/assets/scss/: styles.scss
src/components/: ConfirmationBlock.vue  CoordinatorBlock.vue  DresscodeBlock.vue  HeaderBlock.vue  PhotoBlock.vue  PlaceBlock.vue
src/pages/: AdminPage.vue  GuestPage.vue
src/store/: index.ts
wed-front/: index.html  package.json
wed-front/src/: App.vue
wed-front/src/assets/scss/: styles.scss
wed-front/src/components/: ConfirmationBlock.vue  CoordinatorBlock.vue  PlaceBlock.vue
wed-front/src/mock/: guestList.json
wed-front/src/pages/: AdminPage.vue  ErrorPage.vue  GuestPage.vue
wed-front/src/router/: index.ts
wed-front/src/store/: index.ts
wed_back/: Dockerfile  api.py  database.py  main.py  models.py  pyproject.toml  schemas.py
