[tool.poetry]
name = "wed-back"
version = "0.1.0"
description = ""
authors = ["Pavel Khokhlov <hpawa6@gmail.com>"]
readme = "README.md"
packages = [{include = "wed_back"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.9"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
uvicorn = {extras = ["standart"], version = "^0.21.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
